--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Quieres ser mi sanvalentin?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Quieres ser mi sanvalentin?</h1>
         <div class="buttons">
-            <button class="Siii-button" onclick="handleSiiiClick()">Siii</button>
+            <button class="yes-button" onclick="handleSiiiClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
         <div class="gif_container">
-            <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWFkMTUxM2xqaDJtNnJmYTYxamxzeXZiMnZvZjNtemtsN3hrOGRsdCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/wNk71OcVtOPncxNHVT/giphy.gif>
+            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif%22%20alt=%22Cute%20GIF%22>
         </div>
     </div>
     <script src="script.js"></script>
