--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
         <div class="gif_container">
-            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif%22%20alt=%22Cute%20GIF%22>
+            <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3A2eGNneXV2bWZlMjVydTlqYjhwMDY4dHYzdG50Z3lkd2c2c2xhdiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/1hoKkBNSBxVyHIsPer/giphy.gif" alt="Cute GIF">
         </div>
     </div>
     <script src="script.js"></script>
