--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Quieres ser mi sanvalentin?</h1>
         <div class="buttons">
-            <button class="yes-button" onclick="handleSiiiClick()">Yes</button>
+            <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
         <div class="gif_container">
